--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,10 +1,9 @@
 ---
 # defaults file for rhel10_cis
-var_system_crypto_policy: DEFAULT
 inactivity_timeout_value: '900'
 var_screensaver_lock_delay: '5'
 var_sudo_logfile: /var/log/sudo.log
-var_sudo_timestamp_timeout: '5'
+var_sudo_timestamp_timeout: '15'
 cis_banner_text: Authorized users only. All activity may be monitored and reported.
 login_banner_text: ^(Authorized[\s\n]+users[\s\n]+only\.[\s\n]+All[\s\n]+activity[\s\n]+may[\s\n]+be[\s\n]+monitored[\s\n]+and[\s\n]+reported\.|^(?!.*(\\|fedora|rhel|sle|ubuntu)).*)$
 var_password_pam_remember: '24'
@@ -14,6 +13,7 @@ var_accounts_passwords_pam_faillock_unlock_time: '900'
 var_password_pam_dictcheck: '1'
 var_password_pam_difok: '2'
 var_password_pam_maxrepeat: '3'
+var_password_pam_maxsequence: '3'
 var_password_pam_minclass: '4'
 var_password_pam_minlen: '14'
 var_password_hashing_algorithm_pam: yescrypt
@@ -33,19 +33,23 @@ sysctl_net_ipv6_conf_all_forwarding_value: '0'
 sysctl_net_ipv6_conf_default_accept_ra_value: '0'
 sysctl_net_ipv6_conf_default_accept_redirects_value: '0'
 sysctl_net_ipv6_conf_default_accept_source_route_value: '0'
+sysctl_net_ipv6_conf_default_forwarding_value: '0'
 sysctl_net_ipv4_conf_all_accept_redirects_value: '0'
 sysctl_net_ipv4_conf_all_accept_source_route_value: '0'
+sysctl_net_ipv4_conf_all_forwarding_value: '0'
 sysctl_net_ipv4_conf_all_log_martians_value: '1'
 sysctl_net_ipv4_conf_all_rp_filter_value: '1'
 sysctl_net_ipv4_conf_all_secure_redirects_value: '0'
 sysctl_net_ipv4_conf_default_accept_redirects_value: '0'
 sysctl_net_ipv4_conf_default_accept_source_route_value: '0'
+sysctl_net_ipv4_conf_default_forwarding_value: '0'
 sysctl_net_ipv4_conf_default_log_martians_value: '1'
 sysctl_net_ipv4_conf_default_rp_filter_value: '1'
 sysctl_net_ipv4_conf_default_secure_redirects_value: '0'
 sysctl_net_ipv4_icmp_echo_ignore_broadcasts_value: '1'
 sysctl_net_ipv4_icmp_ignore_bogus_error_responses_value: '1'
 sysctl_net_ipv4_tcp_syncookies_value: '1'
+sysctl_kernel_kptr_restrict_value: '1'
 var_selinux_policy_name: targeted
 var_selinux_state: enforcing
 var_postfix_inet_interfaces: loopback-only
@@ -57,13 +61,12 @@ sshd_max_auth_tries_value: '4'
 var_sshd_max_sessions: '10'
 var_sshd_set_maxstartups: 10:30:60
 sshd_strong_kex: -diffie-hellman-group1-sha1,diffie-hellman-group14-sha1,diffie-hellman-group-exchange-sha1
-sshd_strong_macs: -hmac-md5,hmac-md5-96,hmac-ripemd160,hmac-sha1-96,umac-64@openssh.com,hmac-md5-etm@openssh.com,hmac-md5-96-etm@openssh.com,hmac-ripemd160-etm@openssh.com,hmac-sha1-96-etm@openssh.com,umac-64-etm@openssh.com
+var_audit_backlog_limit: '8192'
 var_accounts_passwords_pam_faillock_dir: /var/run/faillock
 var_auditd_disk_error_action: syslog|single|halt
-var_auditd_disk_full_action: syslog|single|halt
-var_auditd_action_mail_acct: root
+var_auditd_disk_full_action: halt|single
 var_auditd_admin_space_left_action: single|halt
-var_auditd_max_log_file: '6'
+var_auditd_max_log_file: '8'
 var_auditd_max_log_file_action: keep_logs
 var_auditd_space_left_action: email|exec|single|halt
 account_disable_post_pw_expiration: true
@@ -76,10 +79,16 @@ accounts_password_pam_dictcheck: true
 accounts_password_pam_difok: true
 accounts_password_pam_enforce_root: true
 accounts_password_pam_maxrepeat: true
+accounts_password_pam_maxsequence: true
 accounts_password_pam_minclass: true
 accounts_password_pam_minlen: true
+accounts_password_pam_pwhistory_enforce_for_root: true
 accounts_password_pam_pwhistory_remember_password_auth: true
 accounts_password_pam_pwhistory_remember_system_auth: true
+accounts_password_pam_pwhistory_use_authtok: true
+accounts_password_pam_pwquality_password_auth: true
+accounts_password_pam_pwquality_system_auth: true
+accounts_password_pam_unix_authtok: true
 accounts_password_set_max_life_existing: true
 accounts_password_set_min_life_existing: true
 accounts_password_set_warn_age_existing: true
@@ -100,6 +109,7 @@ accounts_user_interactive_home_directory_exists: true
 aide_build_database: true
 aide_check_audit_tools: true
 aide_periodic_cron_checking: true
+audit_rules_continue_loading: true
 audit_rules_dac_modification_chmod: true
 audit_rules_dac_modification_chown: true
 audit_rules_dac_modification_fchmod: true
@@ -132,8 +142,15 @@ audit_rules_login_events_lastlog: true
 audit_rules_mac_modification_etc_selinux: true
 audit_rules_mac_modification_usr_share: true
 audit_rules_media_export: true
-audit_rules_networkconfig_modification: true
-audit_rules_networkconfig_modification_network_scripts: true
+audit_rules_networkconfig_modification_etc_hosts: true
+audit_rules_networkconfig_modification_etc_issue: true
+audit_rules_networkconfig_modification_etc_issue_net: true
+audit_rules_networkconfig_modification_etc_networkmanager_system_connections: true
+audit_rules_networkconfig_modification_etc_sysconfig_network: true
+audit_rules_networkconfig_modification_hostname_file: true
+audit_rules_networkconfig_modification_networkmanager: true
+audit_rules_networkconfig_modification_setdomainname: true
+audit_rules_networkconfig_modification_sethostname: true
 audit_rules_privileged_commands: true
 audit_rules_privileged_commands_kmod: true
 audit_rules_privileged_commands_usermod: true
@@ -153,13 +170,15 @@ audit_rules_unsuccessful_file_modification_openat: true
 audit_rules_unsuccessful_file_modification_truncate: true
 audit_rules_usergroup_modification_group: true
 audit_rules_usergroup_modification_gshadow: true
+audit_rules_usergroup_modification_nsswitch_conf: true
 audit_rules_usergroup_modification_opasswd: true
+audit_rules_usergroup_modification_pam_conf: true
+audit_rules_usergroup_modification_pamd: true
 audit_rules_usergroup_modification_passwd: true
 audit_rules_usergroup_modification_shadow: true
 audit_sudo_log_events: true
 auditd_data_disk_error_action: true
 auditd_data_disk_full_action: true
-auditd_data_retention_action_mail_acct: true
 auditd_data_retention_admin_space_left_action: true
 auditd_data_retention_max_log_file: true
 auditd_data_retention_max_log_file_action: true
@@ -169,8 +188,7 @@ banner_etc_issue_net_cis: true
 banner_etc_motd_cis: true
 chronyd_run_as_chrony_user: true
 chronyd_specify_remote_server: true
-configure_crypto_policy: true
-configure_ssh_crypto_policy: true
+configure_custom_crypto_policy_cis: true
 configure_strategy: true
 coredump_disable_backtraces: true
 coredump_disable_storage: true
@@ -186,11 +204,16 @@ dconf_gnome_screensaver_lock_delay: true
 dconf_gnome_screensaver_user_locks: true
 dconf_gnome_session_idle_user_locks: true
 dir_perms_world_writable_sticky_bits: true
+directory_groupowner_sshd_config_d: true
+directory_owner_sshd_config_d: true
+directory_permissions_sshd_config_d: true
 disable_host_auth: true
 disable_strategy: true
+disable_users_coredumps: true
 enable_strategy: true
 ensure_gpgcheck_globally_activated: true
 ensure_pam_wheel_group_empty: true
+file_at_allow_exists: true
 file_at_deny_not_exist: true
 file_cron_allow_exists: true
 file_cron_deny_not_exist: true
@@ -205,6 +228,7 @@ file_groupowner_cron_daily: true
 file_groupowner_cron_hourly: true
 file_groupowner_cron_monthly: true
 file_groupowner_cron_weekly: true
+file_groupowner_cron_yearly: true
 file_groupowner_crontab: true
 file_groupowner_etc_group: true
 file_groupowner_etc_gshadow: true
@@ -212,10 +236,13 @@ file_groupowner_etc_issue: true
 file_groupowner_etc_issue_net: true
 file_groupowner_etc_motd: true
 file_groupowner_etc_passwd: true
+file_groupowner_etc_security_opasswd: true
+file_groupowner_etc_security_opasswd_old: true
 file_groupowner_etc_shadow: true
 file_groupowner_etc_shells: true
 file_groupowner_grub2_cfg: true
 file_groupowner_sshd_config: true
+file_groupowner_sshd_drop_in_config: true
 file_groupowner_user_cfg: true
 file_groupownership_audit_binaries: true
 file_groupownership_audit_configuration: true
@@ -232,6 +259,7 @@ file_owner_cron_daily: true
 file_owner_cron_hourly: true
 file_owner_cron_monthly: true
 file_owner_cron_weekly: true
+file_owner_cron_yearly: true
 file_owner_crontab: true
 file_owner_etc_group: true
 file_owner_etc_gshadow: true
@@ -239,16 +267,20 @@ file_owner_etc_issue: true
 file_owner_etc_issue_net: true
 file_owner_etc_motd: true
 file_owner_etc_passwd: true
+file_owner_etc_security_opasswd: true
+file_owner_etc_security_opasswd_old: true
 file_owner_etc_shadow: true
 file_owner_etc_shells: true
 file_owner_grub2_cfg: true
 file_owner_sshd_config: true
+file_owner_sshd_drop_in_config: true
 file_owner_user_cfg: true
 file_ownership_audit_binaries: true
 file_ownership_audit_configuration: true
 file_ownership_home_directories: true
 file_ownership_sshd_private_key: true
 file_ownership_sshd_pub_key: true
+file_permission_user_bash_history: true
 file_permission_user_init_files: true
 file_permissions_at_allow: true
 file_permissions_audit_binaries: true
@@ -263,6 +295,7 @@ file_permissions_cron_daily: true
 file_permissions_cron_hourly: true
 file_permissions_cron_monthly: true
 file_permissions_cron_weekly: true
+file_permissions_cron_yearly: true
 file_permissions_crontab: true
 file_permissions_etc_group: true
 file_permissions_etc_gshadow: true
@@ -270,16 +303,18 @@ file_permissions_etc_issue: true
 file_permissions_etc_issue_net: true
 file_permissions_etc_motd: true
 file_permissions_etc_passwd: true
+file_permissions_etc_security_opasswd: true
+file_permissions_etc_security_opasswd_old: true
 file_permissions_etc_shadow: true
 file_permissions_etc_shells: true
 file_permissions_grub2_cfg: true
 file_permissions_home_directories: true
 file_permissions_sshd_config: true
+file_permissions_sshd_drop_in_config: true
 file_permissions_sshd_private_key: true
 file_permissions_sshd_pub_key: true
 file_permissions_user_cfg: true
 file_permissions_var_log_audit: true
-firewalld_loopback_traffic_restricted: true
 firewalld_loopback_traffic_trusted: true
 grub2_audit_argument: true
 grub2_audit_backlog_limit_argument: true
@@ -287,7 +322,18 @@ grub2_enable_selinux: true
 high_disruption: true
 high_severity: true
 journald_compress: true
+journald_disable_forward_to_syslog: true
 journald_storage: true
+kernel_module_atm_disabled: true
+kernel_module_can_disabled: true
+kernel_module_cramfs_disabled: true
+kernel_module_dccp_disabled: true
+kernel_module_freevxfs_disabled: true
+kernel_module_hfs_disabled: true
+kernel_module_hfsplus_disabled: true
+kernel_module_jffs2_disabled: true
+kernel_module_overlayfs_disabled: true
+kernel_module_rds_disabled: true
 kernel_module_sctp_disabled: true
 kernel_module_squashfs_disabled: true
 kernel_module_tipc_disabled: true
@@ -338,7 +384,6 @@ package_kea_removed: true
 package_libselinux_installed: true
 package_mcstrans_removed: true
 package_net_snmp_removed: true
-package_nftables_installed: true
 package_nginx_removed: true
 package_openldap_clients_removed: true
 package_pam_pwquality_installed: true
@@ -353,6 +398,7 @@ package_telnet_server_removed: true
 package_tftp_removed: true
 package_tftp_server_removed: true
 package_vsftpd_removed: true
+package_xorg_x11_server_Xwayland_removed: true
 postfix_network_listening_disabled: true
 reboot_required: true
 restrict_strategy: true
@@ -366,12 +412,13 @@ service_auditd_enabled: true
 service_autofs_disabled: true
 service_avahi_daemon_disabled: true
 service_bluetooth_disabled: true
+service_cockpit_disabled: true
 service_crond_enabled: true
 service_cups_disabled: true
 service_firewalld_enabled: true
 service_nfs_disabled: true
-service_nftables_disabled: true
 service_rpcbind_disabled: true
+service_systemd_journal_upload_enabled: true
 service_systemd_journald_enabled: true
 set_password_hashing_algorithm_libuserconf: true
 set_password_hashing_algorithm_logindefs: true
@@ -379,6 +426,7 @@ set_password_hashing_algorithm_passwordauth: true
 set_password_hashing_algorithm_systemauth: true
 special_service_block: true
 sshd_disable_empty_passwords: true
+sshd_disable_forwarding: true
 sshd_disable_gssapi_auth: true
 sshd_disable_rhosts: true
 sshd_disable_root_login: true
@@ -393,21 +441,28 @@ sshd_set_max_auth_tries: true
 sshd_set_max_sessions: true
 sshd_set_maxstartups: true
 sshd_use_strong_kex: true
-sshd_use_strong_macs: true
 sudo_add_use_pty: true
 sudo_custom_logfile: true
-sudo_require_authentication: true
+sudo_remove_no_authenticate: true
+sudo_remove_nopasswd: true
 sudo_require_reauthentication: true
+sysctl_fs_protected_hardlinks: true
+sysctl_fs_protected_symlinks: true
+sysctl_fs_suid_dumpable: true
+sysctl_kernel_dmesg_restrict: true
+sysctl_kernel_kptr_restrict: true
 sysctl_kernel_randomize_va_space: true
 sysctl_kernel_yama_ptrace_scope: true
 sysctl_net_ipv4_conf_all_accept_redirects: true
 sysctl_net_ipv4_conf_all_accept_source_route: true
+sysctl_net_ipv4_conf_all_forwarding: true
 sysctl_net_ipv4_conf_all_log_martians: true
 sysctl_net_ipv4_conf_all_rp_filter: true
 sysctl_net_ipv4_conf_all_secure_redirects: true
 sysctl_net_ipv4_conf_all_send_redirects: true
 sysctl_net_ipv4_conf_default_accept_redirects: true
 sysctl_net_ipv4_conf_default_accept_source_route: true
+sysctl_net_ipv4_conf_default_forwarding: true
 sysctl_net_ipv4_conf_default_log_martians: true
 sysctl_net_ipv4_conf_default_rp_filter: true
 sysctl_net_ipv4_conf_default_secure_redirects: true
@@ -423,8 +478,8 @@ sysctl_net_ipv6_conf_all_forwarding: true
 sysctl_net_ipv6_conf_default_accept_ra: true
 sysctl_net_ipv6_conf_default_accept_redirects: true
 sysctl_net_ipv6_conf_default_accept_source_route: true
+sysctl_net_ipv6_conf_default_forwarding: true
 unknown_severity: true
 unknown_strategy: true
 use_pam_wheel_group_for_su: true
 wireless_disable_interfaces: true
-xwindows_runlevel_target: true
